# dataflux-pytorch

./: .gitignore  .gitmodules  Dockerfile  Getting Started with Dataflux Dataset for PyTorch with Google Cloud Storage.ipynb  README.md  containerrun.sh  copy_files.py  create_dataset.py  main.py  pyproject.toml  requirements.txt  setup.py  warm_up.py
.github/: CODEOWNERS
.github/workflows/: unit-tests.yaml
benchmark/: requirements.txt
benchmark/standalone_dataloader/: README.md  deployment.yaml  requirements.txt  standalone_dataloader.py
dataflux_pytorch/: __init__.py  _helper.py  dataflux_checkpoint.py  dataflux_iterable_dataset.py  dataflux_mapstyle_dataset.py
dataflux_pytorch/benchmark/: README.md  checkpoint_lightning.py  lightning_checkpoint_benchmark.py
dataflux_pytorch/examples/: lightning_checkpoint.py
dataflux_pytorch/integration_tests/: integration_test.py
dataflux_pytorch/lightning/: __init__.py  dataflux_lightning_async_checkpoint.py  dataflux_lightning_checkpoint.py  fsspec_filesystem.py  gcs_filesystem.py  multipart.py  path_utils.py
dataflux_pytorch/multipart_upload/: __init__.py  multipart.py
dataflux_pytorch/tests/: test_dataflux_checkpoint.py  test_dataflux_iterable_dataset.py  test_dataflux_mapstyle_dataset.py  (+3 more)
demo/: __init__.py  simple_iterable_dataset.py  simple_list_iterate.py  simple_map_style_dataset.py
docs/: code-of-conduct.md
kokoro/: bench.sh  build.sh  build_mac_x86.sh  continuous.cfg  continuous_bench.cfg  presubmit.cfg  presubmit.sh  presubmit_base.cfg  presubmit_mac_x86.cfg  pypi.cfg  pypi.sh
util/: hf_to_gcs.py
(+148 files in other folders)
